fix shifting inline calendar when hovered

--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -49,8 +49,14 @@
     }
 
     &_inline {
+      @include size(max-content, max-content);
       padding: 0;
       border: none;
+
+      &:focus,
+      &:hover {
+        border: none;
+      }
     }
   }
 }
